2004-05-23  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/text/CollationElementIterator/jdk11.java: Use a 
	hardwired "en_us" collation ruleset (from JDK 1.4) rather than 
	the ruleset in the Locale.  We are trying to test the collation
	element iterator not the ruleset.  (And the Classpath "en_us"
	locale's ruleset is thoroughly broken at the moment ...)

2004-05-21  Jerry Quinn  <jlquinn@optonline.net>

	* gnu/testlet/java/util/SimpleTimeZone/check12.java: Fix test to
	correctly use getOffset.  Add testcase for PR libgcj/8321.

2004-05-19  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/lang/Class/init.java: New test.

2004-05-16  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/text/CollationElementIterator/offset.java: New test
	to check the get/setOffset() abilities of CollationElementIterator.

2004-05-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/net/Socket/TestSocketImplFactory.java: Make
	constructor public.

2004-05-16  Mark Wielaard  <mark@klomp.org>

	* gnu/testlet/java/io/Writer/Test.java: Add test for null lock.

2004-05-13  Guilhem Lavaux <guilhem@kaffe.org>

	* gnu/testlet/java/text/RuleBasedCollator/jdk11.java: Fixed
	the test according to the following bug in the JDK
	http://developer.java.sun.com/developer/bugParade/bugs/4406815.html

2004-05-12  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/lang/Integer/getInteger.java : fixed the
	security test to work on JDK 1.4, and to always remove the test
	security manager.
	* gnu/testlet/java/io/FilePermission/simple.java : fixed existing
	test to work on JDK 1.4.  Added new tests for constructor arg
	checking (as per the JDK 1.4 javadoc).

2004-05-11  Stephen Crawley <crawley@dstc.edu.au>

	* gnu/testlet/java/io/FilterWriter/MyFilterWriter.java : new file
	* gnu/testlet/java/io/FilterWriter/write.java : fixed structure,
	and added test for documented behaviour of new FilterWriter(null).

2004-05-11  Stephen Crawley <crawley@dstc.edu.au>
