@@ -34,35 +34,35 @@ public class jdk11 implements Testlet
 {
 // JDK 1.4 collation rule string for locale English (United States)
   String JDK_1_4_EN_US_RULES =
-    "='\u200A'=\u200B=\u200C=\u200D=\u200E=\000 =\001 =\002 =\003 =\004" +
+    "='\u200B'=\u200C=\u200D=\u200E=\u200F=\000 =\001 =\002 =\003 =\004" +
     "=\005 =\006 =\007 =\b ='\t'='\013' =\016=\017 ='\020' =\021 =\022 " +
     "=\023=\024 =\025 =\026 =\027 =\030=\031 =\032 =\033 =\034 =\035=\036" +
     " =\037 =\177=\u0080 =\u0081 =\u0082 =\u0083 =\u0084 =\u0085=\u0086" +
-    " =\u0087 =\u0088 =\u0087 =\u0089 =\u008A=\u008B =\u008C =\u008D =\u008E" +
-    " =\u0070 =\u0071=\u0072 =\u0073 =\u0074 =\u0075 =\u0076 =\u0077=\u0078" +
-    " =\u0077 =\u0079 =\u007A =\u007B =\u007C=\u007D =\u007E;' ';'\u0090" +
+    " =\u0087 =\u0088 =\u0089 =\u008A =\u008B=\u008C =\u008D =\u008E =\u008F" +
+    " =\u0090 =\u0091=\u0092 =\u0093 =\u0094 =\u0095 =\u0096 =\u0097=\u0098" +
+    " =\u0099 =\u009A =\u009B =\u009C =\u009D=\u009E =\u009F;' ';'\u00A0" +
     "';'\u2000';'\u2001';'\u2002';'\u2003';'\u2004';'\u2005';'\u2006';'" +
-    "\u2007';'\u2008';'\u2007';'\u2009';'\u3000';'\uEDEE';'\r' ;'\t' ;'" +
-    "\n';'\f';'\013';\u0301;\u0300;\u0306;\u0302;\u030B;\u0309;\u030C;\u0308" +
-    ";\u030A;\u0303;\u0307;\u0304;\u0337;\u0327;\u0328;\u0323;\u0332;\u0305" +
-    ";\u0307;\u030D;\u030E;\u0310;\u0311;\u0312;\u0313;\u0314;\u0315;\u0316" +
-    ";\u0317;\u0318;\u0317;\u0319;\u031A;\u031B;\u031C;\u031D;\u031E;\u0320" +
-    ";\u0321;\u0322;\u0324;\u0325;\u0326;\u0327;\u0329;\u032A;\u032B;\u032C" +
-    ";\u032D;\u032E;\u0330;\u0331;\u0333;\u0334;\u0335;\u0336;\u0338;\u0337" +
-    ";\u0339;\u033A;\u033B;\u033C;\u033D;\u033E;\u0342;\u0344;\u0345;\u0360" +
-    ";\u0361;\u0483;\u0484;\u0485;\u0486;\u20C0;\u20C1;\u20C2;\u20C3;\u20C4" +
-    ";\u20C5;\u20C6;\u20C7;\u20C8;\u20C7;\u20C9;\u20CA;\u20CB;\u20CC;\u20CD" +
-    ";\u20CE;\u20D0;\u20D1,'-';\u009C;\u2010;\u2011;\u2012;\u2013;\u2014" +
-    ";\u2015;\u2212<'_'<\u009E<','<';'<':'<'!'<\u0091<'?'<\u00AE<'/'<'." +
-    "'<\u00A4<'`'<'^'<\u0098<'~'<\u00A7<\u00A8<'''<'\"'<\u009A<\u00AA<'" +
-    "('<')'<'['<']'<'{'<'}'<\u0097<\u00A6<\u0097<\u009D<'@'<\u0094<\u0D3E" +
-    "<\u0092<\u2091<\u2092<'$'<\u209A<\u209B<\u2093<\u2094<\u2095<\u2096" +
-    "<\u2097<\u0093<\u2098<\u2099<\u2097<\u0095<'*'<'\\'<'&'<'#'<'%'<'+" +
-    "'<\u00A1<\u00E7<\u00C7<'<'<'='<'>'<\u009B<'|'<\u0096<\u00A0<\u00A5" +
-    "<0<1<2<3<4<5<6<7<8<9<\u00AB<\u00AC<\u00AD<a,A<b,B<c,C<d,D<\u00E0,\u00C0" +
+    "\u2007';'\u2008';'\u2009';'\u200A';'\u3000';'\uFEFF';'\r' ;'\t' ;'" +
+    "\n';'\f';'\013';\u0301;\u0300;\u0306;\u0302;\u030C;\u030A;\u030D;\u0308" +
+    ";\u030B;\u0303;\u0307;\u0304;\u0337;\u0327;\u0328;\u0323;\u0332;\u0305" +
+    ";\u0309;\u030E;\u030F;\u0310;\u0311;\u0312;\u0313;\u0314;\u0315;\u0316" +
+    ";\u0317;\u0318;\u0319;\u031A;\u031B;\u031C;\u031D;\u031E;\u031F;\u0320" +
+    ";\u0321;\u0322;\u0324;\u0325;\u0326;\u0329;\u032A;\u032B;\u032C;\u032D" +
+    ";\u032E;\u032F;\u0330;\u0331;\u0333;\u0334;\u0335;\u0336;\u0338;\u0339" +
+    ";\u033A;\u033B;\u033C;\u033D;\u033E;\u033F;\u0342;\u0344;\u0345;\u0360" +
+    ";\u0361;\u0483;\u0484;\u0485;\u0486;\u20D0;\u20D1;\u20D2;\u20D3;\u20D4" +
+    ";\u20D5;\u20D6;\u20D7;\u20D8;\u20D9;\u20DA;\u20DB;\u20DC;\u20DD;\u20DE" +
+    ";\u20DF;\u20E0;\u20E1,'-';\u00AD;\u2010;\u2011;\u2012;\u2013;\u2014" +
+    ";\u2015;\u2212<'_'<\u00AF<','<';'<':'<'!'<\u00A1<'?'<\u00BF<'/'<'." +
+    "'<\u00B4<'`'<'^'<\u00A8<'~'<\u00B7<\u00B8<'''<'\"'<\u00AB<\u00BB<'" +
+    "('<')'<'['<']'<'{'<'}'<\u00A7<\u00B6<\u00A9<\u00AE<'@'<\u00A4<\u0E3F" +
+    "<\u00A2<\u20A1<\u20A2<'$'<\u20AB<\u20AC<\u20A3<\u20A4<\u20A5<\u20A6" +
+    "<\u20A7<\u00A3<\u20A8<\u20AA<\u20A9<\u00A5<'*'<'\\'<'&'<'#'<'%'<'+" +
+    "'<\u00B1<\u00F7<\u00D7<'<'<'='<'>'<\u00AC<'|'<\u00A6<\u00B0<\u00B5" +
+    "<0<1<2<3<4<5<6<7<8<9<\u00BC<\u00BD<\u00BE<a,A<b,B<c,C<d,D<\u00F0,\u00D0" +
     "<e,E<f,F<g,G<h,H<i,I<j,J<k,K<l,L<m,M<n,N<o,O<p,P<q,Q<r,R<s, S & SS" +
-    ",\u00CE<t,T& TH, \u00CD &TH, \u00ED <u,U<v,V<w,W<x,X<y,Y<z,Z&AE,\u00B6" +
-    "&AE,\u00D6&OE,\u0152&OE,\u0153";
+    ",\u00DF<t,T& TH, \u00DE &TH, \u00FE <u,U<v,V<w,W<x,X<y,Y<z,Z&AE,\u00C6" +
+    "&AE,\u00E6&OE,\u0152&OE,\u0153";
 
   private static final int PRIMARY = 1;
   private static final int SECONDARY = 2;
